Integrated RadioButtonComponent for sex and updated the actions and reducers

--- a/src/components/AddFriendInput/AddFriendInput.css
+++ b/src/components/AddFriendInput/AddFriendInput.css
@@ -4,3 +4,10 @@
   border-left: 0;
   border-right: 0;
 }
+
+:local(.radioGroup) {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 8px;
+  background-color: #ebebeb
+}
